--- a/body.html
+++ b/body.html
@@ -47,128 +47,79 @@
                     <th>Fee</th>
                 </tr>
                  <tr>
-                      <td>DGD Trilokpuri PHC</td>
+                      <td>GBSS School New Ashok Nagar-5</td>
                       <td>East Delhi</td>
-                      <td>110091</td>
-                      <td>COVAXIN</td>
-                      <td>0</td>
-                    </tr>
-                     <tr>
-                      <td>DGD Himmatpuri PHC</td>
-                      <td>East Delhi</td>
-                      <td>110091</td>
+                      <td>110096</td>
                       <td>COVISHIELD</td>
                       <td>0</td>
                     </tr>
                      <tr>
-                      <td>LBS Hospital-4</td>
+                      <td>GBSS School New Ashok Nagar-1</td>
                       <td>East Delhi</td>
-                      <td>110091</td>
+                      <td>110096</td>
                       <td>COVISHIELD</td>
                       <td>0</td>
                     </tr>
                      <tr>
-                      <td>CNBC-5</td>
+                      <td>RSKV Vidyalaya W Vinod Nagar-5</td>
                       <td>East Delhi</td>
-                      <td>110031</td>
+                      <td>110092</td>
                       <td>COVISHIELD</td>
                       <td>0</td>
                     </tr>
                      <tr>
-                      <td>LBS Hospital-3</td>
+                      <td>RSKV Vidyalaya W Vinod Nagar-2</td>
                       <td>East Delhi</td>
-                      <td>110091</td>
+                      <td>110092</td>
                       <td>COVISHIELD</td>
                       <td>0</td>
                     </tr>
                      <tr>
-                      <td>CNBC-4</td>
+                      <td>GBSS School New Ashok Nagar-4</td>
                       <td>East Delhi</td>
-                      <td>110031</td>
+                      <td>110096</td>
                       <td>COVISHIELD</td>
                       <td>0</td>
                     </tr>
                      <tr>
-                      <td>LBS Hospital-6</td>
+                      <td>GBSS School New Ashok Nagar-3</td>
                       <td>East Delhi</td>
-                      <td>110091</td>
+                      <td>110096</td>
                       <td>COVISHIELD</td>
                       <td>0</td>
                     </tr>
                      <tr>
-                      <td>LBS Hospital-5</td>
+                      <td>RSKV Vidyalaya W Vinod Nagar-4</td>
                       <td>East Delhi</td>
-                      <td>110091</td>
+                      <td>110092</td>
                       <td>COVISHIELD</td>
                       <td>0</td>
                     </tr>
                      <tr>
-                      <td>Chacha Nehru Bal Chikitsalaya</td>
-                      <td>East Delhi</td>
-                      <td>110031</td>
-                      <td>COVISHIELD</td>
-                      <td>0</td>
-                    </tr>
-                     <tr>
-                      <td>MCW Trilokpuri PHC</td>
-                      <td>East Delhi</td>
-                      <td>110091</td>
-                      <td>COVAXIN</td>
-                      <td>0</td>
-                    </tr>
-                     <tr>
-                      <td>CNBC Hospital-2</td>
-                      <td>East Delhi</td>
-                      <td>110031</td>
-                      <td>COVISHIELD</td>
-                      <td>0</td>
-                    </tr>
-                     <tr>
-                      <td>CNBC-6</td>
-                      <td>East Delhi</td>
-                      <td>110031</td>
-                      <td>COVISHIELD</td>
-                      <td>0</td>
-                    </tr>
-                     <tr>
-                      <td>Lal Bahadur Shastri Hospital</td>
-                      <td>East Delhi</td>
-                      <td>110091</td>
-                      <td>COVISHIELD</td>
-                      <td>0</td>
-                    </tr>
-                     <tr>
-                      <td>LBS Hospital-2</td>
-                      <td>East Delhi</td>
-                      <td>110091</td>
-                      <td>COVISHIELD</td>
-                      <td>0</td>
-                    </tr>
-                     <tr>
-                      <td>MCW Anarkali PHC</td>
+                      <td>RSK Vidyalaya W ChanderNagar-3</td>
                       <td>East Delhi</td>
                       <td>110051</td>
                       <td>COVAXIN</td>
                       <td>0</td>
                     </tr>
                      <tr>
-                      <td>MCW Kondli PHC</td>
+                      <td>RSKV Vidyalaya W Vinod Nagar-1</td>
+                      <td>East Delhi</td>
+                      <td>110092</td>
+                      <td>COVISHIELD</td>
+                      <td>0</td>
+                    </tr>
+                     <tr>
+                      <td>GBSS School New Ashok Nagar-2</td>
                       <td>East Delhi</td>
                       <td>110096</td>
-                      <td>COVAXIN</td>
+                      <td>COVISHIELD</td>
                       <td>0</td>
                     </tr>
                      <tr>
-                      <td>DGD Kalyanpuri PHC</td>
+                      <td>RSKV Vidyalaya W Vinod Nagar-3</td>
                       <td>East Delhi</td>
-                      <td>110091</td>
-                      <td>COVAXIN</td>
-                      <td>0</td>
-                    </tr>
-                     <tr>
-                      <td>CNBC-3</td>
-                      <td>East Delhi</td>
-                      <td>110031</td>
+                      <td>110092</td>
                       <td>COVISHIELD</td>
                       <td>0</td>
                     </tr>
